library/general/imagedigests/samples/container-image-must-have-digest/example_disallowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: opa-disallowed
spec:
  containers:
    - name: opa
      image: openpolicyagent/opa:0.9.2
      args:
        - "run"
        - "--server"
        - "--addr=localhost:8080"
  # ephemeralContainers:
  #   - name: opa
  #     image: openpolicyagent/opa:0.9.2
  #     args:
  #       - "run"
  #       - "--server"
  #       - "--addr=localhost:8080"
